--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "flipkart-clone-frontend",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.7",
@@ -10,17 +11,12 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.22.1",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.1.0"
+    "tailwindcss": "^3.4.1"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "vite": "^7.0.4"
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.1.0"
   }
 }
